# django-otp-admin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
django_otp_admin/: __init__.py  apps.py  forms.py  site.py  utils.py
django_otp_admin/templates/admin/: email_login.html  otp_verify.html
tests/: settings.py  test_utils.py
